# garfieldpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  makefile  oldmakefile  symbols-filtered.txt  symbols.txt
CMake/: .gitignore  BuildUtils.cmake  CMakeLists.txt  GarfieldConfig.cmake.in  GarfieldConfig.dummy.in  GarfieldCreateConfig.cmake  GarfieldDoxygen.cmake  setup.csh.in  setup.sh.in
Data/: IonMobility_Xe+_P12_Xe.txt
Doc/: CMakeLists.txt  Doxyfile.in
Doc/UserGuide/: Appendix.tex  Components.tex  Examples.tex  Installation.tex  Introduction.tex  Layout.tex  Media.tex  Signals.tex  Solids.tex  Titlepage.tex  Tracks.tex  Transport.tex  UserGuide.bib
Examples/: CMakeLists.txt
Examples/AliceTPC/: CMakeLists.txt  full_tpc_sim.C  ion_signal.C  makefile  plot_gas.C
Examples/AnalyticField/: CMakeLists.txt  charges.C  dipole.C  fieldlines.C  gallery.C  integrate.C  isochrons.C  makefile  polar.C  strip.C  wedge.C
Examples/Ansys121/: strip.C
Examples/Ansys123/: CMakeLists.txt  mm.C  strips.C  triplegem.C
Examples/Asacusa/: CMakeLists.txt  example.cpp
Examples/CST/: CMakeLists.txt  cst.C
Examples/Comsol/: CMakeLists.txt  gem.C
Examples/DriftTube/: CMakeLists.txt  makefile  mdt.C  mdt.py  mdt_mt.C  signal.C  signal_mt.C
Examples/Electroluminescence/: example.C  userHandle.C
Examples/Elmer/: README.md  avalanche.cc
Examples/Elmer/lem/: CMakeLists.txt  avalanche.cc  makefile
Examples/Elmer/parallel_plate/: gf_rectangle.geo  parallel_plate.cc  parallel_plate.geo
Examples/Elmer/wire2d/: CMakeLists.txt  wire2d.cc
Examples/GainFluctuations/: CMakeLists.txt  arco2.C  distance.C  makefile
Examples/GasFile/: CMakeLists.txt  generate.C  makefile  penning.C  read.C  read.py
Examples/Geant4GarfieldInterface/: CMakeLists.txt  README.md  exampleGarfield.cc
Examples/Geant4GarfieldInterface/include/: GarfieldAnalysis.hh  GarfieldDetectorConstruction.hh  GarfieldEventAction.hh  GarfieldPhysics.hh
Examples/Geant4GarfieldInterface/src/: GarfieldDetectorConstruction.cc  GarfieldEventAction.cc  GarfieldG4FastSimulationModel.cc  GarfieldMessenger.cc  GarfieldPhysics.cc  GarfieldPhysicsList.cc  GarfieldPrimaryGeneratorAction.cc  GarfieldRunAction.cc  GarfieldSteppingAction.cc
Examples/Gem/: CMakeLists.txt  fieldlines.C  gem.C  gem.py  makefile
Examples/GemMovie/: gem_movie.C
Examples/Grid/: CMakeLists.txt  makefile  savefield.C
Examples/Heed/: CMakeLists.txt  edep.C  edep.py  fe55.C  heed_bfield.C  makefile  plotdedx.C  qdepSi.C  rangeSi.C
Examples/Import/: CMakeLists.txt  Simulation.cpp
Examples/Import/TcadExport/: Attachment_vis.prf  Attachment_vis.tcl  Attachment_vis.tcl~  Efield_vis.tcl  Efield_vis.tcl~  SVisualTcl.log.BAK  Silicon.par  Wfield_vis.tcl  Wfield_vis.tcl~  cmlog.txt  sdevice.par~  sdevice_des.cmd~  svisual1_vis.tcl~  svisual2_vis.tcl~  svisual_vis.tcl~
Examples/Paschen/: CMakeLists.txt  makefile
Examples/RPC/: CMakeLists.txt  Weight.C  c2h2f4_93-5_iso_5_sf6_1-5_bis.gas  run.sh
Examples/RPC/WeightingFieldExapmple/: CMakeLists.txt  Weight.C
Examples/Silicon/: CMakeLists.txt  makefile  planar.C  planar.py  planar_movie.C  signal.C  signal.py
Examples/Srim/: CMakeLists.txt  makefile  srim.C  srimbfield.C  trim.C  trimsignal.C
Examples/Tcad/: CMakeLists.txt  pixel.C  pixel.py  pixel_mt.C  signal.C
Examples/Tcad/Diode3d/: CMakeLists.txt  diode.cpp
Examples/Trapping/: CMakeLists.txt  Simulation.cpp
Examples/Trapping/TcadExport/: .database  .status
Examples/Voxel/: CMakeLists.txt  savefield.C
Examples/neBEM/: BiconicalGemByneBEM.C  CMakeLists.txt  MWPCbyneBEM.C  RPCbyneBEM.C  parallelPlates.C  parallelPlatesWeightingField.C  wires.C
Examples/neBEM/2D/: CMakeLists.txt  dielectric.C  makefile  triangle.C  wire.C
Heed/: CMakeLists.txt  HeedFieldMap.cpp  makefile
Heed/heed++/code/: EnTransfCS.cpp  EnTransfCS.h  HeedDeltaElectron.cpp  HeedDeltaElectron.h  HeedMatterDef.cpp  HeedMatterDef.h  HeedParticle.cpp  HeedParticle.h  HeedParticle_BGM.cpp  HeedParticle_BGM.h  HeedPhoton.cpp  PhotoAbsCS.cpp  PhotoAbsCS.h  PhotoAbsCSLib.cpp  PhotoAbsCSLib.h
Include/: ComponentBase.hh  ComponentNeBem3d.hh  ComponentVoxel.hh  DriftLineRKF.hh  Medium.hh  MediumConductor.hh  Sensor.hh  ViewSignal.hh
Include/Garfield/: AvalancheGrid.hh  AvalancheMC.hh  AvalancheMicroscopic.hh  Component.hh  ComponentAnalyticField.hh  ComponentAnsys121.hh  ComponentAnsys123.hh  ComponentBase.hh  ComponentCST.hh  ComponentComsol.hh  ComponentConstant.hh  ComponentElmer.hh  ComponentElmer2D.hh  ComponentElmer2d.hh  ComponentFieldMap.hh  ComponentGrid.hh  ComponentNeBem2d.hh  ComponentNeBem3d.hh  ComponentNeBem3dMap.hh  ComponentParallelPlate.hh  ComponentTcad2d.hh  ComponentTcad3d.hh  ComponentTcadBase.hh  ComponentUser.hh  ComponentVoxel.hh  DriftLineRKF.hh  GarfieldConstants.hh  Geometry.hh  GeometryBase.hh  GeometryRoot.hh  GeometrySimple.hh  KDTree.hh  LinkDef.h  MagboltzInterface.hh  Medium.hh  MediumCdTe.hh  MediumConductor.hh  MediumDiamond.hh  MediumGaAs.hh  MediumGaN.hh  (+43 more)
Magboltz/: CMakeLists.txt  magboltz.def  magboltz.f
NeBem/: CMakeLists.txt  ComputeProperties.c  Copyright.md  GarfieldInterface.c  GarfieldppInterface.c  GarfieldppInterface.cpp  Interface.h  Isles.c  Isles.h  NR.h  ReTriM.c  Vector.c  Vector.h  luc.c  neBEM.c  neBEM.h  neBEMInterface.c  neBEMInterface.h  nrutil.c  svdcmp.c
Source/: AvalancheGrid.cc  AvalancheMC.cc  AvalancheMicroscopic.cc  Component.cc  ComponentAnalyticField.cc  ComponentAnsys121.cc  ComponentAnsys123.cc  ComponentBase.cc  ComponentCST.cc  ComponentComsol.cc  ComponentConstant.cc  ComponentElmer.cc  ComponentElmer2D.cc  ComponentElmer2d.cc  ComponentFieldMap.cc  ComponentGrid.cc  ComponentNeBem2d.cc  ComponentNeBem3d.cc  ComponentNeBem3dMap.cc  ComponentParallelPlate.cc  ComponentTcad2d.cc  ComponentTcad3d.cc  ComponentTcadBase.cc  ComponentUser.cc  ComponentUserMapBase.cc  ComponentVoxel.cc  DriftLineRKF.cc  GeometryRoot.cc  GeometrySimple.cc  KDTree.cc  Medium.cc  MediumCdTe.cc  MediumDiamond.cc  MediumGaAs.cc  MediumGaN.cc  MediumGas.cc  MediumMagboltz.cc  MediumSilicon.cc  Numerics.cc  OpticalData.cc  (+34 more)
(+26 files in other folders)
